--- a/index.qmd
+++ b/index.qmd
@@ -34,15 +34,22 @@ Certainly! Here's a refined version of the section describing the specialized bo
 
 We employ a variety of specialized content boxes to enhance the reading experience. Each type of box serves a unique purpose, catering to different reader interests.
 
-### Case Study
+<span class="tag tag-case-study"><i class="fas fa-graduation-cap"></i> Case Study</span>
+
 These boxes present practical applications of specific topics discussed in the book. They feature a wide array of time series examples, varying in geographical and topological contexts. Case studies are designed to be universally appealing, offering insights for all readers.
 
-### R-Fundamentals
+
+<span class="tag tag-fundamentals"><i class="fas fa-registered"></i> Fundamentals</span>
+
 To gain deeper insights, it is sometimes interesting to derive of X-13 from basic fundamentals. Instead of solely depending on X-13 for analysis, we explore key concepts through R functions. This approach is particularly engaging for readers who are proficient in R.
 
-### Frequency Domain
+
+<span class="tag tag-frequency"><i class="fas fa-wave-square"></i> Frequency Domain</span>
+
 Time series analysis in the frequency domain provides a powerful perspective for understanding time series behaviors. These boxes introduce and explain the applications and advantages of frequency domain methods in time series analysis.
 If you are unfamiliar with the frequency domain, you can safely skip these sections.
 
-### Exercises
+
+<span class="tag tag-exercises"><i class="fas fa-shoe-prints"></i> Exercises</span>
+
 Each chapter concludes with a series of exercises. These are designed to reinforce the material covered and test your knowledge. They are particularly valuable for readers using this book in an academic course or for self-study.
